@@ -4,10 +4,20 @@ sd_booted() {
   [ -e sys/fs/cgroup/systemd ]
 }
 
+add_privs() {
+  if ! setcap "$2" "$1" 2>/dev/null; then
+    echo "==> Warning: setcap failed, falling back to setuid root on /$1"
+    chmod u+s "$1"
+  fi
+}
+
 post_common() {
   systemd-machine-id-setup
 
-  setcap cap_dac_override,cap_sys_ptrace+ep usr/bin/systemd-detect-virt
+  add_privs usr/bin/systemd-detect-virt 'cap_dac_override,cap_sys_ptrace+ep'
+
+  udevadm hwdb --update
+  journalctl --update-catalog
 
   if sd_booted; then
     systemctl --system daemon-reexec
@@ -45,5 +55,3 @@ post_upgrade() {
     fi
   fi
 }
-
-# vim:set ts=2 sw=2 et:
